--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-NEXTAUTH_URL=http://localhost:3000
+NEXTAUTH_URL=http://whalter.vercel.app
 NEXTAUTH_SECRET=whalter
 BASEAPI=https://backendport-louz.onrender.com
