--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 NEXTAUTH_URL=http://whalter.vercel.app
+BASE=http://whalter.vercel.app
 NEXTAUTH_SECRET=whalter
 BASEAPI=https://backendport-louz.onrender.com
