--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "tsc && npm install tailwindcss && npm install autoprefixer && npm audit fix --force && next build ",
+    "build": "tsc && npm install tailwindcss && npm install autoprefixer && npm install react-quill@2.0.0 && npm audit fix --force && next build ",
     "start": "next start",
     "lint": "next lint"
   },
