--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "tsc && npm install tailwindcss && npm install autoprefixer && npm install react-quill@2.0.0 && npm audit fix --force && next build ",
+    "build": "tsc && npm install tailwindcss && npm install autoprefixer && next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
     "@formspree/react": "^2.5.1",
+    "lodash": "^4.17.21",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
