--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "tsc && npm install && npm install autoprefixer && next build",
+    "build": "tsc && next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
     "@formspree/react": "^2.5.1",
     "lodash": "^4.17.21",
-    "autoprefixer": "^10.0.1",
+    "autoprefixer": "^10.4.16",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
