--- a/package.json
+++ b/package.json
@@ -17,14 +17,18 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.0.3",
     "@tailwindcss/typography": "^0.5.10",
+    "axios": "^1.6.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "date-fns": "^2.30.0",
     "lucide-react": "^0.92.0",
     "next": "^14.0.3",
+    "next-auth": "^4.24.5",
     "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.12.0",
+    "react-quill": "^2.0.0",
     "react-slick": "^0.29.0",
     "sharp": "^0.32.6",
     "slick-carousel": "^1.8.1",
@@ -32,10 +36,12 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "@types/node": "^20",
+    "@types/next": "^9.0.0",
+    "@types/next-auth": "^3.15.0",
+    "@types/node": "^20.10.4",
     "@types/prop-types": "^15.7.11",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "^18.2.45",
+    "@types/react-dom": "^18.2.17",
     "@types/react-slick": "^0.23.12",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
