--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -p 4000",
     "lint": "next lint"
   },
   "dependencies": {
@@ -22,7 +22,7 @@
     "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
     "lucide-react": "^0.92.0",
-    "next": "^14.0.3",
+    "next": "^14.2.3",
     "next-auth": "^4.24.5",
     "next-themes": "^0.2.1",
     "react": "^18",
